// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Emoji works in heading 1`] = `"doc(heading(\\"Wow \\", emoji, \\" \\"), paragraph)"`;

exports[`Emoji works in list 1`] = `
"<ul>
  <li
    data-bangle-name=\\"listItem\\"
    class=\\"bangle-nv-container\\"
  >
    <span class=\\"bangle-nv-content\\"
      ><p>
        I am a list
        <span
          data-bangle-name=\\"emoji\\"
          data-bangle-attrs='{\\"emojiAlias\\":\\"zebra\\"}'
          contenteditable=\\"false\\"
          draggable=\\"true\\"
          >🦓</span
        >
      </p></span
    >
  </li>
</ul>
<p><br /></p>
"
`;

exports[`Emoji works in para 1`] = `
"<p>
  life is good
  <span
    data-bangle-name=\\"emoji\\"
    data-bangle-attrs='{\\"emojiAlias\\":\\"zebra\\"}'
    contenteditable=\\"false\\"
    draggable=\\"true\\"
    >🦓</span
  >
</p>
"
`;
